[package]
name = "librefang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the LibreFang Agent OS"
readme = "README.md"

[features]
# Default = telemetry only. Channel adapters all run as out-of-process
# sidecars (`librefang.sidecar.adapters.*` in the SDK package) so there
# are no per-adapter cargo features left to gate. The historical
# `core-channels` / `all-channels` / `mini` aliases pointed at
# `channel-*` features in `librefang-channels` that no longer exist;
# they're gone too.
default = ["telemetry"]
# `android` / `all-channels` flavors removed alongside the
# `librefang-api/all-channels` alias — every channel is a sidecar
# and the Android-specific `rustls-connector` workaround that
# motivated those flags is gone with the in-process IMAP/SMTP code
# path. Release CI's `cli_*_android` job switched to plain
# `--features telemetry`.
#
# `mini` kept as an empty alias so the existing `cli_linux_mini` /
# `cli_mac_mini` / `cli_windows_mini` release jobs continue to
# produce `librefang-${target}-mini.tar.gz` artifacts. After the
# per-channel cargo features went away the `mini` artifact is
# byte-identical to the default-features build, so a follow-up
# should retire those jobs entirely + drop this alias; the
# coordinated workflow + Cargo.toml change is out of scope for the
# scaffolding cleanup PR that introduced this stub.
mini = []
telemetry = ["librefang-api/telemetry", "dep:opentelemetry", "dep:tracing-opentelemetry"]

[[bin]]
name = "librefang"
path = "src/main.rs"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-api = { path = "../librefang-api", default-features = false }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-migrate = { path = "../librefang-migrate" }
librefang-skills = { path = "../librefang-skills" }
librefang-extensions = { path = "../librefang-extensions" }
librefang-memory = { path = "../librefang-memory" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-core = "0.1"
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }
walkdir = { workspace = true }
base64 = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
librefang-acp = { path = "../librefang-acp", features = ["kernel-adapter"] }
rusqlite = { workspace = true }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
libc = "0.2"
fluent = "0.17"
unic-langid = "0.9"
open = "5.3.5"
toml_edit = "0.25.8"
rustls = "0.23"
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
