[package]
name = "librefang-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for LibreFang — curated autonomous capability packages"

[dependencies]
librefang-types = { path = "../librefang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
serial_test = "3"
