[package]
name = "librefang-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Import engine for migrating from other agent frameworks into LibreFang"

[dependencies]
librefang-types = { path = "../librefang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
json5 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
