[package]
name = "librefang-kernel-handle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KernelHandle trait for in-process callers into the LibreFang kernel"

[dependencies]
librefang-types = { path = "../librefang-types" }
async-trait = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
