[package]
name = "librefang-llm-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM driver trait and shared types for LibreFang"

[dependencies]
librefang-types = { path = "../librefang-types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
