[package]
name = "librefang-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the LibreFang Agent OS"

[dependencies]
librefang-types = { path = "../librefang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
