[package]
name = "librefang-rl-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-horizon RL rollout trajectory exporter (W&B / Tinker / Atropos integration surface)"

[dependencies]
librefang-http = { path = "../librefang-http" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
