[package]
name = "librefang-runtime-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media generation drivers (TTS, image, video, music) for LibreFang (refs #3710 Phase 1)"
readme = "README.md"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-http = { path = "../librefang-http" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# Serialises the env-mutating ElevenLabs voice_id validator tests so
# they cannot race with one another over `ELEVENLABS_API_KEY`. Same
# version pin as the rest of the workspace (`librefang-runtime`).
serial_test = "3"

[lints]
workspace = true
