[package]
name = "librefang-runtime-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OAuth flows (ChatGPT, GitHub Copilot) for LibreFang runtime drivers"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-http = { path = "../librefang-http" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
