[package]
name = "librefang-runtime-sandbox-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Docker sandbox for tool exec (refs #3710 Phase 1)"
readme = "README.md"

[dependencies]
librefang-types = { path = "../librefang-types" }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
