[package]
name = "librefang-runtime-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM skill sandbox for LibreFang runtime"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel-handle = { path = "../librefang-kernel-handle" }
librefang-http = { path = "../librefang-http" }
wasmtime = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
