[package]
name = "librefang-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime and execution environment for LibreFang"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-http = { path = "../librefang-http" }
librefang-kernel-handle = { path = "../librefang-kernel-handle" }
librefang-runtime-mcp = { path = "../librefang-runtime-mcp" }
librefang-runtime-oauth = { path = "../librefang-runtime-oauth" }
librefang-llm-drivers = { path = "../librefang-llm-drivers" }
librefang-runtime-wasm = { path = "../librefang-runtime-wasm" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-channels = { path = "../librefang-channels" }
librefang-memory = { path = "../librefang-memory" }
librefang-skills = { path = "../librefang-skills" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", features = ["alloc"] }
bytes = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
regex-lite = { workspace = true }
rusqlite = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rmcp = { workspace = true }
http = "1"
shlex = "1"
once_cell = "1"
parking_lot = "0.12"
toml = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
landlock = { version = "0.4", optional = true }
seccompiler = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
landlock-sandbox = ["dep:landlock"]
seccomp-sandbox = ["dep:seccompiler"]
wasm-hooks = []

[dev-dependencies]
tokio-test = { workspace = true }
