[package]
name = "librefang-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test infrastructure: mock kernel, mock LLM driver and API route test utilities"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-runtime = { path = "../librefang-runtime" }
librefang-api = { path = "../librefang-api", default-features = false, features = ["telemetry"] }

tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
