[package]
name = "librefang-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for the LibreFang Agent OS"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
fluent = { workspace = true }
unic-langid = { workspace = true }
regex-lite = { workspace = true }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
