[package]
name = "librefang-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LibreFang Protocol (OFP) — agent-to-agent networking"

[dependencies]
librefang-types = { path = "../librefang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
base64 = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = { workspace = true }
